# Proteina-Complexa_server_minimal

./: pyproject.toml
community_models/: README.md  __init__.py
community_models/LigandMPNN/: run.py
community_models/colabdesign/: __init__.py  setup.py
community_models/colabdesign/af/: loss.py  model.py  prep.py
community_models/colabdesign/colabdesign.egg-info/: PKG-INFO  SOURCES.txt
community_models/colabdesign/shared/: model.py  utils.py
community_models/openfold/utils/: rigid_utils.py
configs/: analyze.yaml  analyze_motif.yaml  analyze_motif_binder.yaml  evaluate.yaml  evaluate_ame_from_pdb_dir.yaml  evaluate_from_pdb_dir.yaml  evaluate_motif_from_pdb_dir.yaml  monomer_pipeline.yaml  search_ame_local_pipeline.yaml  search_binder_local_pipeline.yaml  search_binder_pipeline.yaml  search_ligand_binder_local_pipeline.yaml  search_motif_local_pipeline.yaml  training_local_latents.yaml  training_local_latents_idx_aa.yaml  training_local_latents_idx_tip.yaml  training_local_latents_unidx_aa.yaml  training_local_latents_unidx_tip.yaml
configs/dataset/unified/: afdb_monomers.yaml  base.yaml  genie2.yaml  genie2_motif_idx_aa.yaml  genie2_motif_idx_tip.yaml  genie2_motif_unidx_aa.yaml  genie2_motif_unidx_tip.yaml  pdb_interfaces.yaml  plinder.yaml  plinder_ame.yaml  ted_dimers.yaml  ted_dimers_ligand.yaml  ted_dimers_motif.yaml
configs/design_tasks/: ame_dict_v2.yaml  motif_dict.yaml
configs/example/: evaluate_motif.yaml  evaluate_motif_binder.yaml  training_local_latents_binder.yaml  training_local_latents_binder_genie2.yaml
configs/generation/: validation.yaml  validation_local_latents.yaml
configs/nn/: local_latents_score_nn_160M.yaml  local_latents_score_nn_160M_binder.yaml  local_latents_score_nn_160M_binder_cat.yaml  local_latents_score_nn_160M_idx_motif_aa.yaml  local_latents_score_nn_160M_idx_motif_tip.yaml  local_latents_score_nn_160M_ligand_chainbreak.yaml  local_latents_score_nn_160M_unidx_motif.yaml  local_latents_score_nn_160M_unidx_motif_binder.yaml
configs/nn_ae/: nn_10m.yaml  nn_130m.yaml  nn_30m.yaml  nn_60m.yaml  test.yaml
configs/pipeline/: base_gen_data.yaml  model_sampling.yaml
configs/pipeline/ame/: ame_analyze.yaml  ame_evaluate.yaml  ame_generate.yaml
configs/pipeline/binder/: binder_analyze.yaml  binder_evaluate.yaml  binder_generate.yaml
configs/pipeline/ligand_binder/: ligand_binder_analyze.yaml  ligand_binder_evaluate.yaml  ligand_binder_generate.yaml
configs/pipeline/monomer/: monomer_analyze.yaml  monomer_evaluate.yaml  monomer_generate.yaml
configs/pipeline/motif/: README.md  idx_motif_evaluate.yaml  idx_motif_generate.yaml  motif_analyze.yaml  uidx_motif_evaluate.yaml  uidx_motif_generate.yaml
configs/sweeps/: bb_ca_temperature.yaml  beam_width.yaml  example.yaml  search_replicas.yaml
configs/targets/: ligand_targets_dict.yaml  targets_dict.yaml
env/: build_uv_env.sh  docker-ops.sh  download_startup.sh
env/docker/: Dockerfile  entrypoint.sh
script_utils/: generate_inference_configs.py  save_load_pdb.py
script_utils/aggregate_successful_samples/: aggregate_successful_samples.py
script_utils/bioinformatic/: esm_pll.py  local_clash_analysis.py
script_utils/download/: download_esm_model.py  download_esmfold_model.py
script_utils/foldcomp_dataprep/: idlist_to_sequencefasta.py  metadata_fasta_to_parquet.py  parquetprocessed_to_idlist.py  parquetraw_to_parquetprocessed.py  structure_filter_array.py  structure_filter_parquet_to_idlist.py  update_lookup_file.py  visualise_fc_samples.py
script_utils/plot/: README_beam_search_trajectory.md  plot_histo.py  plot_histo_ablation.py  visualize_beam_search_trajectory.py  visualize_interfaces.py
script_utils/utils/: prepare_baseline_samples.py  rename_chains.py  sample_binder_structures.py  ss_filter_synthetic_multimer.py
src/proteinfoundation/: __init__.py  analyze.py  analyze_orig.py  evaluate.py  filter.py  generate.py  proteina.py  train.py
src/proteinfoundation/cli/: __init__.py  cli_runner.py  cli_runner_debug.py  cli_runner_orig.py  progress_bar.py  startup.py  target_cli.py  target_manager.py  validate.py
src/proteinfoundation/datasets/: atomworks_crop_transforms.py  atomworks_dataloader_utils.py  atomworks_ddp_utils.py  atomworks_default_metadata_row_parsers.py  atomworks_ligand_transforms.py  atomworks_transforms.py  atomworks_utils.py  filters.py  gen_dataset.py  structure_data.py  transforms.py
src/proteinfoundation/evaluation/: binder_eval.py  binder_eval_utils.py  esm_eval.py  monomer_eval.py  monomer_eval_utils.py  motif_binder_eval.py  motif_binder_eval_utils.py  motif_eval.py  motif_eval_utils.py  multimer_eval.py  utils.py
src/proteinfoundation/flow_matching/: base_flow_matcher.py  product_space_flow_matcher.py  rdn_flow_matcher.py
src/proteinfoundation/metrics/: binder_metrics.py  designability.py  diversity.py  folding_models.py  inverse_folding_models.py  ipsae.py  metric_utils.py  novelty.py  structural_metric_ss_ca_ca.py
src/proteinfoundation/nn/: README.md  genie2.py  local_latents_transformer.py  local_latents_transformer_track_int.py  local_latents_transformer_v2.py  old_feature_factory.py  protein_transformer.py  protein_transformer_int.py
src/proteinfoundation/partial_autoencoder/: autoencoder.py  decoder.py  decoder_ff.py  encoder.py  inference.py  train.py
src/proteinfoundation/patches/: __init__.py  atomworks_patches.py
src/proteinfoundation/result_analysis/: analysis.py  analysis_utils.py  binder_analysis.py  binder_analysis_utils.py  compute_diversity.py  freesasa_naccess.cfg  monomer_analysis.py  monomer_analysis_utils.py  monomer_merge_results.py  motif_analysis.py  motif_analysis_utils.py  motif_binder_analysis.py  motif_binder_analysis_utils.py  plot_aa.py  plot_pareto.py  plotting.py
src/proteinfoundation/rewards/: README.md  __init__.py  alphafold2_reward.py  alphafold2_reward_utils.py  base_reward.py  bioinformatics_reward.py  reward_utils.py  rf3_reward.py  tmol_reward.py
src/proteinfoundation/search/: __init__.py  base_search.py  beam_search.py  best_of_n_search.py  fk_steering.py  mcts_search.py  (+4 more)
(+60 files in other folders)
